--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,7 +93,6 @@ a:hover {
   position: relative;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-image: url("../../assets/img/blank.svg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -194,11 +193,6 @@ section:nth-last-of-type(odd) {
   }
 }
 
-.navbar {
-  margin: 0.5rem;
-  border-radius: 10px;
-  font-size: 1.5rem;
-}
 
 .subheader {
   font-size: 5rem;
@@ -208,55 +202,6 @@ section:nth-last-of-type(odd) {
   transition: all ease 0.2s;
 }
 
-.navbar-brand {
-  margin-left: 0;
-  margin-right: 0;
-  font-weight: 600;
-  color: var(--main-text-color) !important;
-  transition: all ease 0.2s;
-  padding: 0 0.5rem;
-}
-
-@media (min-width: 768px) {
-  .navbar-brand {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-}
-
-.navbar-nav {
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  column-gap: 1rem;
-}
-
-.nav-item > a {
-  border-radius: 2px;
-  color: var(--main-text-color) !important;
-  transition: all ease 0.2s;
-}
-
-.navbar-toggler {
-  color: var(--main-text-color) !important;
-  transition: all ease 0.2s;
-  border: 2px solid transparent;
-}
-
-.navbarblur {
-  box-shadow: inset 0px 0px 5px 5000px var(--navbar-box);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  transition: all ease 0.2s !important;
-}
-
-@media (min-width: 768px) {
-  .navbarblur {
-    box-shadow: none;
-    backdrop-filter: none;
-    -webkit-backdrop-filter: none;
-  }
-}
 
 .bottom-chevron {
   display: inline-flex;
@@ -341,63 +286,6 @@ footer {
   text-decoration: none;
 }
 
-.image-carousel {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  min-height: 300px; /* A sensible minimum height for smaller images */
-  max-height: 76vh; /* Ensure the carousel doesn't take up too much vertical space */
-  width: 100%; /* Fully responsive */
-}
-
-#image-wrapper {
-  width: 100%; /* Fixed width for the image area */
-  height: 80vh; /* Fixed height for the image area */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden; /* Prevent image overflow */
-  border-radius: 40px; /* Optional: Rounded corners for the wrapper */
-}
-
-#carousel-image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-  border-radius: 40px;
-}
-
-.carousel-arrow {
-  position: absolute;
-  background: none;
-  border: none;
-  font-size: 3rem;
-  cursor: pointer;
-  color: var(--arrow-color);
-}
-
-.left-arrow {
-  left: 10%;
-}
-
-.right-arrow {
-  right: 10%;
-}
-
-.carousel-arrow:hover {
-  transition: transform 0.3s ease, color 0.3s ease !important;
-  transform: scale(1.15) !important;
-  color: var(--chevron-hover);
-}
-
-.carousel-arrow:active {
-  transition: transform 0.1s ease, color 0.1s ease !important;
-  transform: scale(0.9) !important;
-  color: var(--chevron-click);
-}
-
 .highlight-box {
   gap: 10px;
   justify-content: center;
@@ -447,4 +335,20 @@ footer {
 .hobby-content img {
   border-radius: 50px;
   box-shadow: 20px 20px 4px rgba(0, 0, 0, 0.1);
+}
+
+.hobbies-details {
+  height: 40vh; 
+  display: flex; /* Use flexbox for alignment */
+  align-items: center; /* Center items vertically */
+  justify-content: center; /* Center items horizontally */
+}
+
+.hobby-content {
+  width: 100%; /* Ensure all hobbies take the full width */
+  height: 100%; /* Match the parent's height */
+  display: flex;
+  flex-direction: column; /* Stack title and content vertically */
+  align-items: center; /* Center items horizontally */
+  justify-content: flex-start; /* Keep the title and content aligned properly */
 }
